<resources>
    <string name="app_name">Compassion.ly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imageonboardingscreen1">Tampil Gambar Fitur Belajar</string>
    <string name="learn">Learn</string>
    <string name="short_desc_learn">Kami menyediakan platform informasi mengenai mata pelajaran sesuai jurusan yang ada di perkuliahan.</string>
    <string name="imageonboardingscreen2">Tampil Gambar Sistem Rekomendasi</string>
    <string name="system_recommedation">Sistem Rekomendasi</string>
    <string name="short_desc_system_recommedation">Kami menyediakan sistem rekomendasi jurusan yang akan membantu anda dalam mengambil keputusan untuk menempuh pendidikan lanjut di masa depan.</string>
    <string name="next">Selanjutnya</string>
    <string name="back">Kembali</string>
    <string name="signIn">Sign In</string>
    <string name="please_fill_your_data">Lengkapi data dirimu</string>
    <string name="request_to_fill_in_the_data_correctly">Mohon isi data berikut dengan benar</string>
    <string name="first_name">Nama awal</string>
    <string name="last_name">Nama akhir</string>
    <string name="phone_number">Nomor Telepon</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="school_from">Asal Sekolah</string>
    <string name="save">Simpan</string>
    <string name="username_profile">Nama User</string>
    <string name="email">Email</string>
    <string name="phone_number_sample">+6288712654514</string>
    <string name="gender_sample">Laki-Laki</string>
    <string name="school_sample">Nusantara</string>
    <string name="school_detail">Detail Sekolah</string>
    <string name="npsn">NPSN</string>
    <string name="npsn_sample">123D1234</string>
    <string name="major">Jurusan</string>
    <string name="major_sample">MIPA</string>
    <string name="province">Provinsi</string>
    <string name="province_sample">Kalimantan Barat</string>
    <string name="city">Kota</string>
    <string name="sign_out">Keluar</string>
    <string name="search">Search</string>
    <string name="result">Hasil</string>
    <string name="coding">Coding</string>
    <string name="desc_icon_star">Menampilkan icon bintang</string>
    <string name="_5">5</string>
    <string name="sample_step_for_introduction_features">Step 1 : Klik menu learn pada halaman dashboard</string>
    <string name="desc_features_iamge">Gambar langkah-langkah menjalankan fitur</string>
    <string name="sample_introduction_learn_feature">Pada bagian ini, kamu akan mempelajari beberapa topik. Kamu dapat memilih untuk mempelajarinya atau melewatinya untuk mempelajari topik lainnya. Setelah belajar, kamu akan diminta untuk memberikan penilaian terhadap materi yang telah dipelajari dengan skala rating dari satu hingga lima bintang yang digunakan untuk menggambarkan tingkat kesukaan. Satu bintang menunjukkan ketidaksukaan, sementara lima bintang menunjukkan kesukaan yang sangat tinggi.</string>
    <string name="skip_intruction">Geser ke arah kiri untuk skip</string>
    <string name="desc_icon_skip">Icon skip</string>
    <string name="desc_image_topic">Image of topic</string>
    <string name="desc_topic_coding"><![CDATA[Coding adalah salah satu tindakan dari langkah-langkah pemrograman dengan menuliskan kode atau skrip dalam bahasa pemrograman. Supaya skrip tersebut dapat dipahami oleh komputer, maka saat proses coding kamu harus mengikuti aturan sintaks yang berlaku]]></string>
    <string name="desc_button_topic">Tombol baca topic</string>
    <string name="done">Selesai</string>
    <string name="user_like_the_material">Apakah kamu menyukai topik ini ?</string>
    <string name="send">Kirim</string>
    <string name="image_rate_success">Gambar rating sukses</string>
    <string name="explore_another_topic">Pelajari Topik Lain</string>
    <string name="app_logo">App Logo</string>
    <string name="circle_deco">circle decoration</string>
    <string name="login_title">Ayo cari \nPassion mu !!</string>
    <string name="login_desc">Sudahkah menemukan jurusan yang kamu \nimpikan? Jika belum ayo cari tahu bersama kami!</string>
    <string name="web_client_id">223463197253-hrce5hgpv7jtarp0318nl29k53ovj2kd.apps.googleusercontent.com</string>
    <string name="search_hint_jurusan">Cari jurusan yang kamu inginkan…</string>
    <string name="fitur_utama">Fitur Utama</string>
    <string name="pengantar_njurusan">Pengantar \nJurusan</string>
    <string name="sistem_rekomendasi">Sistem \nRekomendasi</string>
    <string name="riwayat_topik">Riwayat Topik</string>
    <string name="logo">logo</string>
    <string name="halo">Halo,</string>
    <string name="decoration">Decoration</string>
    <string name="image_major">Image Major</string>
    <string name="tab_ketertarikan">Ketertarikan</string>
    <string name="tab_jurusan">Jurusan</string>
    <string name="hasil">Hasil</string>
    <string name="matakuliah_terkait">Matakuliah Terkait</string>
    <string name="kampus">Kampus</string>
    <string name="cari_topic">Cari topic</string>
    <string name="data_topic_tidak_ditemukan_silahkan_refresh_halaman">Terjadi kesalahan, mohon periksa kembali koneksi anda</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="quick_recommendation">Quick \nRecommendation</string>
    <string name="quick_rec">Quick Recommendation</string>
    <string name="question1_quickrec">Apa saja hobi atau minat yang kamu miliki?</string>
    <string name="question2_quickrec">Hal apa yang ingin kamu pelajari lebih lanjut?</string>
    <string name="question3_quickrec">Coba deskripsikan kepribadian mu!</string>
    <string name="submit">Submit</string>
    <string name="result_quickrec_explain">Setelah menganalisis deskripsi yang telah kamu berikan, kami melihat bahwa kamu memiliki ketertarikan pada bidang berikut :</string>
    <string name="image">image</string>
    <string name="nol">0</string>
    <string name="quickrec_hint">Tuliskan minimal dalam 50 karakter</string>
    <string name="rekomendasi_jurusan">Rekomendasi Jurusan</string>
    <string name="majorrec">Kami merekomendasikan kamu untuk mempertimbangkan beberapa jurusan di bawah ini :</string>
    <string name="hint_recommendation">Tingkat akurasi rekomendasi yang diberikan akan meningkat seiring dengan jumlah pembelajaran yang dilakukan pada fitur learn.</string>
    <string name="hint_recommendation2">Kami memberikan rekomendasi dengan menganalisa hasil pembelajaranmu pada setiap topik yang kamu pelajari.</string>
    <string name="evaluasi">Evaluasi</string>
    <string name="interestrec">Hasil dari pembelajaran yang telah kamu lakukan menunjukan bahwa kamu memiliki ketertarikan pada bidang berikut :</string>
    <string name="daftar_universitas_di_indonesia">Daftar Universitas</string>
    <string name="berikut_merupakan_beberapa_universitas_yang_ada_pada_di_indonesia">Berikut merupakan beberapa universitas yang ada dan aktif di negara Indonesia</string>
    <string name="nama_universitas">Nama Universitas</string>
    <string name="interest">Ketertarikan</string>
    <string name="_1000">1000</string>
    <string name="kapaistas">Kapasitas</string>
    <string name="data_jurusan">Data Jurusan</string>
    <string name="nama_major">Nama Major</string>
    <string name="_100">100</string>
    <string name="peminat_format">%1$d Peminat</string>
    <string name="prospek_kerja">Prospek Kerja</string>
    <string name="token_not_found">Terdapat kesalahan</string>
    <string name="data_not_found">Data tidak ditemukan</string>
    <string name="ask_login">Silahkan login kembali</string>
    <string name="daftar_kampus">Daftar Kampus</string>
    <string name="lihat_rekomendasi">Lihat Rekomendasi</string>
    <string name="cari_universitas">Cari Universitas ...</string>
    <string name="topic_history">Histori Topik</string>
    <string name="rec_history">Histori Rekomendasi</string>
    <string name="bidang">Bidang</string>
</resources>