<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.onboarding.screen.Screen1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="258dp"
            android:layout_height="250dp"
            android:src="@drawable/image_onboarding_screen_1"
            android:contentDescription="@string/imageonboardingscreen1"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn"
            style="@style/Theme.Compassionly.Poppins_20_bold_secondaryContainer"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/short_desc_learn"
            android:textAlignment="center"
            android:lineSpacingExtra="5dp"
            style="@style/Theme.Compassionly.Poppins_12_regular_onSurface"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        style="@style/Button_Primary_12_regular"
        android:text="@string/next"
        android:layout_gravity="bottom"/>

</FrameLayout>