<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_primary"
    tools:context=".presentation.feature.users_data.ProfileActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profilePicture"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:src="@drawable/image_profile_sample"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/Image_Corner_12"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="12dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username_profile"
                        style="@style/Theme.Compassionly.Poppins_18_bold_ternaryContainer"
                        android:ellipsize="marquee"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                </LinearLayout>


            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/intro1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                app:strokeColor="@color/md_theme_primaryFixed_mediumContrast"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/head"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@color/md_theme_onPrimaryFixedVariant">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/phoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/phone_number_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/gender"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gender_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/school_from"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/school"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/school_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/schoolDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                app:strokeColor="@color/md_theme_primaryFixed_mediumContrast"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:layout_constraintTop_toBottomOf="@+id/intro1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:background="@color/md_theme_onPrimaryFixedVariant">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        tools:ignore="UselessParent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/school_detail"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/npsn"
                            android:layout_marginTop="20dp"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/npsn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/npsn_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/major"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/major"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/major_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/province"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/province"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/province_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/city"
                            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>

                        <TextView
                            android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/school_sample"
                            android:layout_marginTop="5dp"
                            style="@style/Theme.Compassionly.Poppins_12_light_onPrimary"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/sign_out"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                style="@style/Button_Primary_12_onPrimaryFixedVariant"
                app:layout_constraintTop_toBottomOf="@+id/schoolDetail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>