<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/md_theme_onPrimaryFixedVariant"
    app:strokeColor="@color/md_theme_primaryFixed_mediumContrast"
    app:strokeWidth="2dp"
    app:cardElevation="20dp"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/topicName"
            style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coding" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:src="@drawable/icon_star"
                android:contentDescription="@string/desc_icon_star"/>

            <TextView
                android:id="@+id/topicStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_5"
                android:textAlignment="center"
                style="@style/Theme.Compassionly.Poppins_12_bold_onPrimary"/>


        </LinearLayout>
        
    </LinearLayout>
    
</com.google.android.material.card.MaterialCardView>