<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imageTopic"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/image_topic_sample"
            android:scaleType="centerCrop"
            android:contentDescription="@string/desc_image_topic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/topicName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coding"
                android:layout_marginTop="60dp"
                style="@style/Theme.Compassionly.Poppins_20_bold_secondaryContainer"/>

            <TextView
                android:id="@+id/shortDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/desc_topic_coding"
                android:textAlignment="center"
                android:lineSpacingExtra="5dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                style="@style/Theme.Compassionly.Poppins_12_regular_onSurface"/>

        </LinearLayout>

    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>