<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.topic.TopicSuccessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <ImageView
            android:layout_width="3000dp"
            android:layout_height="300dp"
            android:src="@drawable/image_success_learn"
            android:contentDescription="@string/image_rate_success"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMoreExploreTopic"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/explore_another_topic"
                style="@style/Button_Primary_12_regular"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="5dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShowRecommendation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="60dp"
                android:text="@string/lihat_rekomendasi"
                android:layout_marginStart="5dp"
                style="@style/Button_Primary_12_regular"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>